syntax = "proto3";
package friendsapi;
option go_package = "/friendsapi";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service FriendService {
	rpc Add (FriendRequest) returns (google.protobuf.Empty);
	rpc Accept (FriendRequest) returns (google.protobuf.Empty);
	rpc Decline (FriendRequest) returns (google.protobuf.Empty);
	rpc Block (FriendRequest) returns (google.protobuf.Empty);
	rpc GetFriends (GetFriendsRequest) returns (GetFriendsResponse);
	rpc GetFriendRequests (GetPendingFriendRequestsRequest) returns (GetPendingFriendRequestsResponse);
}

message FriendRequest {
	int64 requester_id = 1;
	int64 receiver_id = 2;
}


message PendingFriendRequest {
	FriendInfo requester = 1;
	google.protobuf.Timestamp sent_at = 2;
}

message FriendInfo {
	int64 user_id = 1;
	string display_name = 2;
	string username = 3;
}

message GetFriendsRequest {}

message GetFriendsResponse {
	repeated FriendInfo friends = 1;
}


message GetPendingFriendRequestsRequest {}

message GetPendingFriendRequestsResponse {
	repeated PendingFriendRequest friend_requests = 1;
}
